Fixed z-index issue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -62,6 +62,7 @@ div.remove-button {
     position: absolute;
     left: 6px;
     top: 0;
+    z-index: 0;
   }
   &::before {
     content: '';
@@ -77,6 +78,7 @@ div.remove-button {
     position: absolute;
     left: 6px;
     top: 0;
+    z-index: 0;
   }
 }
 .heading-large{
@@ -204,6 +206,7 @@ textarea{
   bottom: 0;
   padding-top: 10vh;
   background: rgba(0,0,0,0.9);
+  z-index: 1;
   button{
     max-width: 100%;
   }
